--- a/jenkins-pipeline-template.yaml
+++ b/jenkins-pipeline-template.yaml
@@ -8,7 +8,7 @@ metadata:
 
   iconClass: icon-jenkins
   openshift.io/display-name: Jenkins BuildConfig
-  openshift.io/provider-display-name: cloudowski.com
+  openshift.io/provider-display-name: goffinet.org
   tags: jenkins, build
 
 objects:
@@ -150,4 +150,4 @@ parameters:
     value: jenkins-builder
   - name: GIT_REPO
     description: "URL of the repository with Jenkins configuration"
-    value: https://github.com/cloudowski/jenkins-openshift-pipeline
+    value: https://github.com/goffinet/jenkins-openshift-pipeline
